roles/k3s/apache/files/apachechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apachephp
  labels: 
    app: apachephp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  externalIPs:
    - 23.88.97.13
  selector:
     app: apachephp
